# PaperDigestBot

./: .env.example  .env.template  .gitignore  CLAUDE.md  README.md  alembic.ini  architeture.md  dev.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  taskiq_client.pkl  telegram_bot_architecture.md
alembic/: env.py
alembic/versions/: 3639fdd2dc46_add_repo_url_github_pat_timezone_fields_.py  7565b5ff609a_add_timezone_field.py
config/: config.toml  summary.tg.j2
db/: init.sql
pat/: db.sqlite
scripts/: README.md  test_scheduler_manual.py
src/: action.py  config.py  db.py  db_config.py  dispatcher.py  pat.py  preference.py  render.py  scheduler.py  utils.py
src/bot/: telegram.py  tg.py
src/models/: __init__.py  base.py  message_record.py  reaction_record.py  user_setting.py
src/paper_digest_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_config.py  test_database_schema.py  test_dispatcher.py  test_integration.py  test_models.py  test_preference.py  test_qdrant.py  test_rabbitmq.py  test_redis.py  test_render.py  test_scheduler.py  test_telegram.py  test_telegram_bot.py
tests/data/: summarized.parquet
