[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "paper_digest_bot"
version = "0.1.0"
dependencies = [
    "taskiq",
    "loguru",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "python-telegram-bot[all,ext]>=22.0",
    "toml>=0.10.2",
    "qdrant-client>=1.14.2",
    "pika>=1.3.2",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = "src"  # This fixes the module import error by adding src to the Python path
