[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "paper_digest_bot"
version = "0.1.0"
dependencies = [
    "taskiq",
    "loguru",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "python-telegram-bot[all,ext]>=22.0",
    "toml>=0.10.2",
    "qdrant-client>=1.14.2",
    "pika>=1.3.2",
    "requests>=2.32.3",
    "taskiq-aio-pika>=0.4.2",
    "pycryptodome>=3.22.0",
    "python-vaultwarden>=1.0.1",
    "ipython>=9.2.0",
    "ipykernel>=6.29.5",
    "taskiq-redis>=1.0.8",
    "redis>=5.3.0",
    "aiohttp>=3.11.18",
    "polars>=1.29.0",
    "jinja2>=3.1.6",
    "apscheduler>=3.11.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "dotenv>=0.9.9",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = "src"  # This fixes the module import error by adding src to the Python path
